--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/*" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Perkpro</title>
+        <meta
+            name="description"
+            content="Find, Rent, or Buy Your Dream Property— Easier & Faster!"
+        />
     </head>
     <body>
         <div id="root"></div>
         <div id="portal"></div>
         <script type="module" src="/src/main.tsx"></script>
+        <script
+            src="https://cdn.pulse.is/livechat/loader.js"
+            data-live-chat-id="680b5f5538f88b8b330642a5"
+            async
+        ></script>
     </body>
 </html>
 
